force-app/main/default/objects/InvoicedOrders__c/InvoicedOrders__c.object-meta.xml
<CustomObject>
    <label>Invoiced Order</label>
    <nameField>
        <label>Invoiced Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoiced Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>