force-app/main/default/objects/InvoicedOrders__c/fields/ExternalID_c__c.field-meta.xml
<CustomField>
    <fullName>ExternalID_c__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>