force-app/main/default/objects/InvoicedOrders__c/fields/Nettoerloes__c.field-meta.xml
<CustomField>
    <fullName>Nettoerloes__c</fullName>
    <label>Nettoerloes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>