force-app/main/default/objects/InvoicedOrders__c/fields/NettoerloesWeightedAverage__c.field-meta.xml
<CustomField>
    <fullName>NettoerloesWeightedAverage__c</fullName>
    <formula>(Nettoerloes__c / SoldAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nettoerloes Weighted Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>