force-app/main/default/objects/InvoicedOrders__c/fields/PrimaryKey__c.field-meta.xml
<CustomField>
    <fullName>PrimaryKey__c</fullName>
    <label>Primary Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>