force-app/main/default/objects/InvoicedOrders__c/fields/ProductCategoryBusinessArea__c.field-meta.xml
<CustomField>
    <fullName>ProductCategoryBusinessArea__c</fullName>
    <label>Product Category Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProductGroupBusinessArea__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B10</fullName>
            </value>
            <value>
                <fullName>Without B10</fullName>
                <isActive>false</isActive>
                <label>Without B10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>