force-app/main/default/objects/InvoicedOrders__c/fields/SoldAmount__c.field-meta.xml
<CustomField>
    <fullName>SoldAmount__c</fullName>
    <label>Sold Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>